[package]
name = "advanced"
version = "0.1.0"
authors = ["Kasper Nielsen <kasper0406@gmail.com>"]
edition = "2018"

[[bin]]
name = "player"
path = "src/player.rs"

[[bin]]
name = "controller"
path = "src/controller.rs"

[[bin]]
name = "tello"
path = "src/tello.rs"

[dependencies]
gstreamer = "0.15.6"
winit = "0.22.2"
vulkano = "0.19.0"
vulkano-win = "0.19.0"
vulkano-shaders = "0.19.0"
png = "0.16.5"
evdev-rs = "0.4.0"
nix = "0.17.0"
chrono = "0.4.12"

[dependencies.gstreamer-app]
version = "0.15.6"
default-features = false
features = ["v1_10"]
